<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="title_activity_splashpage">Splashpage</string>
    
    <string name="Button_submit">SUBMIT</string>
    <string name="Button_register">REGISTER</string>
    <string name="Button_login">LOGIN</string>
    <string name="Button_addition">ADDITION</string>
    <string name="Button_subtraction">SUBTRACTION</string>
    <string name="Button_division">DIVISION</string>
    <string name="Button_cancel">Cancel</string>
    
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstname">First name</string>
    <string name="secondname">Second name</string>
    <string name="numberone">Number one</string>
    <string name="numbertwo">Number two</string>
    <string name="idnumber">Id Number</string>
    <string name="result">result</string>
    

</resources>
